# wordle-solver

./: .gitignore  README.md  pyproject.toml
wordle_solver/: fetch.py  main.py  solver.py
